<resources>
    <string name="app_name">Travel Journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Stefan Popescu</string>
    <string name="nav_header_subtitle">stefan.popescu@domain.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
    <string name="trip_picture_description">Trip Picture</string>
    <string name="splash_screen_gif_description">Splash Screen GIF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip_name">Trip\'s name:</string>
    <string name="trip_price">Trip\'s price</string>
    <string name="destination">Destination</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea side</string>
    <string name="mountains">Mountains</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="add_trip">Add Trip</string>
    <string name="button_text_save">Save</string>
    <string name="text_view_default_price">0 EUR</string>
    <string name="toast_text_could_not_save_trip">Couldn\'t save the trip!</string>
    <string name="button_text_go_back">Go back</string>
    <string name="text_our_mission">Our mission</string>
    <string name="image_view_text_logo">Text logo</string>
    <string name="text_view_our_mission_desc">Travel Journal helps you to write and document abobut the experience you had during trips. You can include the details of the trip (destination, price, date etc.) and the photos you took during your trip.</string>
    <string name="text_view_about_us">About Us</string>
    <string name="text_view_about_us_desc">At Travel Journal Inc. is a renowned mobile app development company and the best IT Software Solutions provider based in Cluj-Napoca, Romania. Our company is well known to craft the most innovative and eye catchy mobile apps.</string>
    <string name="edit_text_phone">Phone</string>
    <string name="edit_text_email">Email</string>
    <string name="edit_text_name">Name</string>
    <string name="button_text_submit">Submit</string>
    <string name="edit_text_your_message">Your Message</string>
</resources>