<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trip.EditTripActivity">

    <ImageView
        android:id="@+id/editTripPicture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_view_trip_picture_height"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/galleryImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/edit_trip_margin"
        android:layout_marginBottom="@dimen/edit_trip_margin"
        android:src="@drawable/ic_menu_gallery"
        app:layout_constraintBottom_toBottomOf="@+id/editTripPicture"
        app:layout_constraintEnd_toStartOf="@+id/cameraImageButton" />

    <ImageButton
        android:id="@+id/cameraImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/edit_trip_margin"
        android:layout_marginBottom="@dimen/edit_trip_margin"
        android:src="@drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="@+id/editTripPicture"
        app:layout_constraintEnd_toEndOf="@+id/editTripPicture" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/edit_trip_margin"
        android:layout_marginTop="@dimen/edit_trip_margin"
        android:layout_marginRight="@dimen/edit_trip_margin"
        android:layout_marginBottom="@dimen/edit_trip_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTripPicture">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_name" />

        <EditText
            android:id="@+id/destinationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination" />

        <RadioGroup
            android:id="@+id/typeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/typeRadioCityBreak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_break"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/typeRadioSeaSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sea_side"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/typeRadioMountains"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mountains"
                android:textSize="@dimen/radio_button_text_size" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/priceSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="1000"
                android:progress="0" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="@dimen/text_view_price_width"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/text_view_default_price"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <EditText
            android:id="@+id/startDateEditText"
            android:layout_width="@dimen/date_picker_width"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/start_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/endDateEditText"
            android:layout_width="@dimen/date_picker_width"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/end_date"
            android:inputType="date" />

        <RatingBar
            android:id="@+id/tripRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="1"
            android:stepSize="0.5" />

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text_save"
        android:layout_marginStart="@dimen/edit_trip_margin"
        android:layout_marginEnd="@dimen/edit_trip_margin"
        android:layout_marginBottom="@dimen/edit_trip_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>